# mcl

./: .depend  Alias.cc  Borg.cc  Buffer.cc  Chat.cc  Config.cc  Curses.cc  Embedded.cc  Group.cc  Hotkey.cc  INSTALL  InputBox.cc  InputLine.cc  Interpreter.cc  MUD.cc  Makefile.in  Option.cc  OutputWindow.cc  Pipe.cc  README.1ST  Screen.cc  Selectable.cc  Selection.cc  Session.cc  Shell.cc  Socket.cc  StaticBuffer.cc  StatusLine.cc  String.cc  TTY.cc  VERSION  VERSION.in  Window.cc  configure  configure.in  main.cc  mccpDecompress.c  misc.cc
admin/: Makefile.in
doc/: Changes  Chat  Chat.html  Embedded  Embedded.html  Examples  Examples.html  Modules  Modules.html  Plugins  README  README.html  TODO  mcl.spec  mcl.spec.in
h/: Action.h  Alias.h  Bitvalues.h  Borg.h  Buffer.h  Chat.h  Color.h  Config.h  Control.h  Curses.h  EmbeddedInterpreter.h  Group.h  Hotkey.h  InputBox.h  InputLine.h  Interpreter.h  Label.h  List.h  MUD.h  MessageBox.h  MessageWindow.h  NullEmbeddedInterpreter.h  Numbered.h  Option.h  OutputWindow.h  PerlEmbeddedInterpreter.h  Pipe.h  Plugin.h  ProxyWindow.h  PythonEmbeddedInterpreter.h  Screen.h  ScrollbackSearch.h  Selectable.h  Selection.h  Session.h  Shell.h  Socket.h  StaticBuffer.h  StatusLine.h  String.h  (+10 more)
plugins/: PerlEmbeddedInterpreter.cc  PythonEmbeddedInterpreter.cc
samples/: .cvsignore  README
samples/auto/: README  completion.pl  gag.pl  highlight.pl  mudftp.pl  trigger.pl
samples/contrib/: DynaComplete.py  README  bot.pl  bot.py  ccancel.pl  log.pl  mudcompletion.pl  profanity.pl  prompt.pl  reconnect.pl  repeat.pl  spellcheck.pl  vars.pl
samples/sys/: README  color.pl  config.pl  config.py  functions.pl  functions.py  hook.pl  hook.py  idle.pl  idle.py  init.pl  init.py  keys.pl
